--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -144,7 +143,36 @@
             left: 150%;
         }
 
-        .project-media{position:relative;width:100%;aspect-ratio:16 / 9;margin-bottom:20px;border-radius:8px;overflow:hidden;background-color:#000;border:1px solid var(--border-color)}.project-media img,.project-media video{position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;transition:opacity .4s ease-in-out}.project-media video{opacity:0}.project-card:hover .project-media video{opacity:1}.project-card:hover .project-media img{opacity:0}.card-content{flex-grow:1;display:flex;flex-direction:column}.card-content p{flex-grow:1}.project-tags{margin-top:auto}.section-title{font-size:3.5rem;font-weight:700;margin-bottom:50px;text-align:center;background-image:linear-gradient(120deg,var(--primary-text-color),var(--accent-color));-webkit-background-clip:text;background-clip:text;color:transparent;text-shadow:2px 2px 8px rgba(0,0,0,.7)}.hero-content h1{font-size:5rem;font-weight:700;line-height:1.2;background-image:linear-gradient(120deg,var(--primary-text-color),var(--accent-color));-webkit-background-clip:text;background-clip:text;color:transparent;text-shadow:2px 2px 10px rgba(0,0,0,.8);margin-bottom:20px}.hero-content p{font-size:1.6rem;color:var(--secondary-text-color);margin-top:15px;min-height:2.4rem;text-shadow:1px 1px 3px rgba(0,0,0,.5)}.typed-cursor{color:var(--accent-color);font-weight:300;animation:blink .7s infinite}@keyframes blink{50%{opacity:0}}.about-container{display:flex;align-items:center;gap:60px}.about-text{flex:2;font-size:1.2rem;color:var(--secondary-text-color);line-height:1.9;text-shadow:1px 1px 2px rgba(0,0,0,.4)}.about-image{flex:1;text-align:center}.about-image img{width:280px;height:280px;border-radius:50%;border:6px solid var(--accent-color);box-shadow:0 0 40px var(--accent-glow);filter:grayscale(20%);transition:filter .3s ease,transform .3s ease}.about-image img:hover{filter:grayscale(0%);transform:scale(1.03)}.skills-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:35px}.skill-category{background-color:var(--card-bg-color);padding:35px;border-radius:12px;border:1px solid var(--border-color);transition:transform .3s ease,box-shadow .3s ease}.skill-category:hover{transform:translateY(-8px);box-shadow:0 8px 25px rgba(0,0,0,.3)}.skill-category h3{font-size:1.7rem;margin-bottom:25px;color:var(--accent-color);text-shadow:1px 1px 3px rgba(0,0,0,.5)}.skill-category ul{list-style:none;display:flex;flex-wrap:wrap;gap:18px}.skill-category li{background:var(--bg-color-end);padding:10px 20px;border-radius:6px;font-weight:300;border:1px solid var(--border-color);transition: all 0.2s ease-in-out;}.skill-category li:hover{background-color:var(--accent-color);color:var(--bg-color);transform: scale(1.1);}.projects-container{display:grid;grid-template-columns:repeat(auto-fit,minmax(350px,1fr));gap:40px}.card-content h3{font-size:1.8rem;margin-bottom:15px}.card-content p{margin-bottom:25px;line-height:1.7;text-shadow:1px 1px 2px rgba(0,0,0,.4)}.project-tags{display:flex;flex-wrap:wrap;gap:12px;padding-top:20px}.project-tags span{background-color:var(--accent-color);color:#0a0a0a;font-size:.8rem;padding:6px 12px;border-radius:18px;font-weight:500}.project-links{padding-top:20px}.project-links a{color:var(--accent-color);text-decoration:none;font-weight:500;transition:color .3s ease,transform .3s ease,text-shadow .3s ease}.project-links a:hover{color:var(--primary-text-color);transform:translateX(5px);text-shadow:0 0 8px var(--accent-glow)}#contact p{text-align:center;max-width:700px;margin:0 auto 50px;color:var(--secondary-text-color);font-size:1.2rem;line-height:1.8;text-shadow:1px 1px 2px rgba(0,0,0,.4)}.contact-links{display:flex;justify-content:center;gap:40px}.contact-links a{color:var(--accent-color);font-size:1.3rem;font-weight:500;text-decoration:none;transition:transform .3s,text-shadow .3s,color .3s ease-in-out}.contact-links a:hover{transform:scale(1.1);text-shadow:0 0 12px var(--accent-glow);color:var(--primary-text-color)}footer{text-align:center;padding:30px 8%;background-color:var(--card-bg-color);border-top:1px solid var(--border-color);position:relative;z-index:2;color:var(--secondary-text-color);font-size:.9rem}.reveal{opacity:0;transform:translateY(50px);transition:opacity .8s ease,transform .8s ease}.reveal.revealed{opacity:1;transform:translateY(0)}@media (max-width:992px){.about-container{flex-direction:column;text-align:center}}@media (max-width:768px){header{padding:15px 5%}nav{display:none}.hero-content h1{font-size:3.5rem}.hero-content p{font-size:1.3rem}.section-title{font-size:2.6rem;margin-bottom:40px}body{cursor:auto}#three-background{display:none}.about-image img{width:200px;height:200px}}
+        .project-media{position:relative;width:100%;aspect-ratio:16 / 9;margin-bottom:20px;border-radius:8px;overflow:hidden;background-color:#000;border:1px solid var(--border-color)}.project-media img,.project-media video{position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;transition:opacity .4s ease-in-out}.project-media video{opacity:0}.project-card:hover .project-media video{opacity:1}.project-card:hover .project-media img{opacity:0}.card-content{flex-grow:1;display:flex;flex-direction:column}.card-content p{flex-grow:1}.project-tags{margin-top:auto}.section-title{font-size:3.5rem;font-weight:700;margin-bottom:50px;text-align:center;background-image:linear-gradient(120deg,var(--primary-text-color),var(--accent-color));-webkit-background-clip:text;background-clip:text;color:transparent;text-shadow:2px 2px 8px rgba(0,0,0,.7)}.hero-content h1{font-size:5rem;font-weight:700;line-height:1.2;background-image:linear-gradient(120deg,var(--primary-text-color),var(--accent-color));-webkit-background-clip:text;background-clip:text;color:transparent;text-shadow:2px 2px 10px rgba(0,0,0,.8);margin-bottom:20px}.hero-content p{font-size:1.6rem;color:var(--secondary-text-color);margin-top:15px;min-height:2.4rem;text-shadow:1px 1px 3px rgba(0,0,0,.5)}.typed-cursor{color:var(--accent-color);font-weight:300;animation:blink .7s infinite}@keyframes blink{50%{opacity:0}}.about-container{display:flex;align-items:center;gap:60px}.about-text{flex:2;font-size:1.2rem;color:var(--secondary-text-color);line-height:1.9;text-shadow:1px 1px 2px rgba(0,0,0,.4)}.about-image{flex:1;text-align:center}.about-image img{width:280px;height:280px;border-radius:50%;border:6px solid var(--accent-color);box-shadow:0 0 40px var(--accent-glow);filter:grayscale(20%);transition:filter .3s ease,transform .3s ease}.about-image img:hover{filter:grayscale(0%);transform:scale(1.03)}.skills-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:35px}.skill-category{background-color:var(--card-bg-color);padding:35px;border-radius:12px;border:1px solid var(--border-color);transition:transform .3s ease,box-shadow .3s ease}.skill-category:hover{transform:translateY(-8px);box-shadow:0 8px 25px rgba(0,0,0,.3)}.skill-category h3{font-size:1.7rem;margin-bottom:25px;color:var(--accent-color);text-shadow:1px 1px 3px rgba(0,0,0,.5)}.skill-category ul{list-style:none;display:flex;flex-wrap:wrap;gap:18px}.skill-category li{background:var(--bg-color-end);padding:10px 20px;border-radius:6px;font-weight:300;border:1px solid var(--border-color);transition: all 0.2s ease-in-out;}.skill-category li:hover{background-color:var(--accent-color);color:var(--bg-color);transform: scale(1.1);}.projects-container{display:grid;grid-template-columns:repeat(auto-fit,minmax(350px,1fr));gap:40px}.card-content h3{font-size:1.8rem;margin-bottom:15px}.card-content p{margin-bottom:25px;line-height:1.7;text-shadow:1px 1px 2px rgba(0,0,0,.4)}.project-tags{display:flex;flex-wrap:wrap;gap:12px;padding-top:20px}.project-tags span{background-color:var(--accent-color);color:#0a0a0a;font-size:.8rem;padding:6px 12px;border-radius:18px;font-weight:500}.project-links{padding-top:20px}.project-links a{color:var(--accent-color);text-decoration:none;font-weight:500;transition:color .3s ease,transform .3s ease,text-shadow .3s ease}.project-links a:hover{color:var(--primary-text-color);transform:translateX(5px);text-shadow:0 0 8px var(--accent-glow)}
+        #resume { text-align: center; }
+        .resume-content p {
+            max-width: 700px;
+            margin: 0 auto 40px;
+            color: var(--secondary-text-color);
+            font-size: 1.2rem;
+            line-height: 1.8;
+            text-shadow: 1px 1px 2px rgba(0,0,0,.4);
+        }
+        .btn-resume {
+            display: inline-block;
+            background-color: var(--accent-color);
+            color: #121212;
+            padding: 15px 35px;
+            border-radius: 50px;
+            text-decoration: none;
+            font-weight: 600;
+            font-size: 1.1rem;
+            border: 2px solid var(--accent-color);
+            transition: all 0.3s ease;
+            box-shadow: 0 0 20px var(--accent-glow);
+        }
+        .btn-resume:hover {
+            background-color: transparent;
+            color: var(--accent-color);
+            transform: translateY(-5px);
+            box-shadow: 0 5px 30px var(--accent-glow);
+        }
+        #contact p{text-align:center;max-width:700px;margin:0 auto 50px;color:var(--secondary-text-color);font-size:1.2rem;line-height:1.8;text-shadow:1px 1px 2px rgba(0,0,0,.4)}.contact-links{display:flex;justify-content:center;gap:40px}.contact-links a{color:var(--accent-color);font-size:1.3rem;font-weight:500;text-decoration:none;transition:transform .3s,text-shadow .3s,color .3s ease-in-out}.contact-links a:hover{transform:scale(1.1);text-shadow:0 0 12px var(--accent-glow);color:var(--primary-text-color)}footer{text-align:center;padding:30px 8%;background-color:var(--card-bg-color);border-top:1px solid var(--border-color);position:relative;z-index:2;color:var(--secondary-text-color);font-size:.9rem}.reveal{opacity:0;transform:translateY(50px);transition:opacity .8s ease,transform .8s ease}.reveal.revealed{opacity:1;transform:translateY(0)}@media (max-width:992px){.about-container{flex-direction:column;text-align:center}}@media (max-width:768px){header{padding:15px 5%}nav{display:none}.hero-content h1{font-size:3.5rem}.hero-content p{font-size:1.3rem}.section-title{font-size:2.6rem;margin-bottom:40px}body{cursor:auto}#three-background{display:none}.about-image img{width:200px;height:200px}}
     </style>
 </head>
 <body>
@@ -157,12 +185,13 @@
             <a href="#about">About</a>
             <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
+            <a href="#resume">Resume</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
 
     <main>
-         <section id="hero">
+        <section id="hero">
             <div class="hero-content reveal">
                 <h1>Hi, I'm Aryan Saxena</h1>
                 <p><span id="typed-text"></span></p>
@@ -196,7 +225,7 @@
                 <div class="project-card reveal">
                     <div class="project-media">
                         <img src="https://placehold.co/600x338/1C1C1C/39CCCC?text=Facial+Scan+Active&font=exo2" alt="Face Recognition System Thumbnail">
-                        <video src="C:\Users\mysti\Downloads\69951-538962240_small.mp4" loop muted playsinline></video>
+                        <video src="69951-538962240_small.mp4" loop muted playsinline></video>
                     </div>
                     <div class="card-content">
                         <h3>Face Recognition System</h3>
@@ -210,7 +239,7 @@
                 <div class="project-card reveal">
                     <div class="project-media">
                         <img src="https://placehold.co/600x338/1C1C1C/39CCCC?text=E-Pill+Medicine+Tracker&font=exo2" alt="E-Pill Medicine Tracker Thumbnail">
-                        <video src="C:\Users\mysti\Downloads\5448-183788663.mp4" loop muted playsinline></video>
+                        <video src="5448-183788663.mp4" loop muted playsinline></video>
                     </div>
                     <div class="card-content">
                         <h3>E-Pill Medicine Tracker</h3>
@@ -224,7 +253,15 @@
             </div>
         </section>
 
-         <section id="contact">
+        <section id="resume">
+            <div class="resume-content">
+                <h2 class="section-title reveal">My Resume</h2>
+                <p class="reveal">For a more detailed and formal overview of my skills, experience, and projects, you can download the PDF version of my resume. This document is suitable for printing and offline viewing.</p>
+                <a href="https://drive.google.com/file/d/1WWGg8Zm_qVFqm5LQa2RB5zcSW3EizYwn/view?usp=drive_link" target="_blank" class="btn-resume reveal">View Resume (PDF)</a>
+            </div>
+        </section>
+
+        <section id="contact">
             <h2 class="section-title reveal">Get In Touch</h2>
             <p class="reveal">I'm currently open to new opportunities and collaborations. Feel free to reach out via email or connect with me on social media.</p>
             <div class="contact-links">
@@ -410,4 +447,3 @@
     </script>
 </body>
 </html>
-```
